--- a/Web Design Review_MITO/index.html
+++ b/Web Design Review_MITO/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Sign up</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="container">
-        <form action="" method="get">
-            <div class="form-group">
-                <input type="text" name="" id="" placeholder="Enter Username">
+    <div class="container flex">
+        <div class="librarybook-page flex">
+            <div class="text">
+                <h1>Royal Elites Gossip</h1>
+                <p>All Gossip in the Royal Elites Academy<br>All in one space</p>
             </div>
-            <div class="form-group">
-                <input type="password" name="" id="" placeholder="Enter Password...">
-            </div>
-            <div class="form-group">
-                <button type="submit">Sign In</button>
-            </div>
-        </form>
+            <form action="#">
+                <input type="email" placeholder="Email or Phone number" required>
+                <input type="password" placeholder="Password" required>
+                <div class="link">
+                    <button type="submit" class="login">Login</button>
+                    <a href="#" class="forgot">Forgot Password?</a>
+                </div>
+                <hr>
+                <div class="button">
+                    <a href="#">Create new account</a>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
