01/20/2025 4:30pm - WEB DESIGN - LOGIN SIGNUP MITO-TW23-BSITWMA

--- a/Web Design Review_MITO/index.html
+++ b/Web Design Review_MITO/index.html
@@ -11,7 +11,7 @@
         <div class="librarybook-page flex">
             <div class="text">
                 <h1>Royal Elites Gossip</h1>
-                <p>All Gossip in the Royal Elites Academy<br>All in one space</p>
+                <p>All Gossip in the Royal Elites School<br>All in one space</p>
             </div>
             <form action="#">
                 <input type="email" placeholder="Email or Phone number" required>
