--- a/Web Design Review_MITO/index.html
+++ b/Web Design Review_MITO/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Sign up</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="container flex">
         <div class="librarybook-page flex">
             <div class="text">
-                <h1>Royal Elites Gossip</h1>
+                <h1><i class="bi-alarm"></i>Royal Elites Gossip</h1>
                 <p>All Gossip in the Royal Elites School<br>All in one space</p>
             </div>
             <form action="#">
