--- a/TA1_MITO_TW23-BSITWMA/index.html
+++ b/TA1_MITO_TW23-BSITWMA/index.html
@@ -14,7 +14,7 @@
         <div class="header">
             <h2>Mito, Hazel Marites T.</h2>
             <h3>Web Designer</h3>
-            <img src=""
+            <img src="1.jpg">
             <div class="contact">
                 <ul>
                     <li>2521 Andrade St. Sta. Cruz Manila</li>
