--- a/TA1_MITO_TW23-BSITWMA/index.html
+++ b/TA1_MITO_TW23-BSITWMA/index.html
@@ -3,8 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>TA1_MITO_TW23-BSITWMA</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
+        *{
+            font-family: 'Poppins';
+            font-weight: lighter;
+        }
+
+        .container{
+            width: 900px;
+            border: 5px solid black;
+            padding: 10px;
+            margin: 20px;
+            color: black;
+            background-color: #fff;
+            text-align: justify;
+            margin-left: 500px;
+        }
+
+        .header{
+            text-align: left;
+            padding: 10px;
+            margin: 10px;
+        }
+
+        .header ul li{
+            list-style: none;
+            text-align: left;
+            margin: 0;
+            padding: 0;
+        }
+
+        .objective{
+            padding: 40px;
+            margin: 10px;
+        }
+
+        .academic{
+            padding: 40px;
+            margin: 10px;
+        }
+
+        .skills{
+            padding: 40px;
+            margin: 10px;
+        }
+
+        img{
+            float: right;
+            width: 120px;
+            margin-right: 10px;
+            margin-top: 20px;
+            padding: 10px;
+        }
+
+        .change{
+            width: 900px;
+            border: 5px solid black;
+            padding: 10px;
+            margin: 20px;
+            color: black;
+            background-color: #B5828C;
+            text-align: justify;
+            margin-left: 500px;
+        }
+
+        .container table{
+            width: 100%;
+            height: 50%;
+        }
+    </style>
 </head>
 <body>
   <button type = "button" onclick ="change()">Change Me!</button>
