--- a/TA1_MITO_TW23-BSITWMA/index.html
+++ b/TA1_MITO_TW23-BSITWMA/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TA1_MITO_TW23-BSITWMA</title>
+    <link rel = "stylesheet" href = "style.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
